change z-index of isFetchingModal to 99 to fixed some display issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,8 @@
 // }
 
 .isFetching-modal {
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0,0.5);
+  z-index: 99;
 }
 
 .login-container {
